demo_serving/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow-serving
  labels:
    name: mlflow-serving
    app.kubernetes.io/name: mlflow-serving
    app.kubernetes.io/part-of: mlflow-genai-platform
